# ept-simu

./: CMakeLists.txt  README.md  alpha_tesla.eps  alpha_tesla.gle  apfu.eps  apfu_08_20.eps  apfu_14_151.eps  apfu_14_20.eps  apfu_14_50.eps  asymaps.f  bild1_milan.eps  bild3_milan.eps  bild4_milan.eps  bild5_milan.eps  bldfi.f  brems_mc.f  brems_mc.gle  brems_mc_el.eps  brems_mc_el.f  brems_mc_el.gle  brems_mc_elh.eps  brems_mc_kreis.f  cmap10.map  cmap11.map  cmap12.map  cmap13.map  cmap14.map  cmap14_const.map  cmap14_hom.map  cmap8.map  cmap_in_omap.f0  comp_map_map.f  d_disp.eps  det_test.txt  detektor_eichung.gle  detektor_geo.f  diffhist.eps  diffhist.gle  dist.eps  document.aux  (+120 more)
cal/: deichung_140.cal  eich_brel_130.cal
cmake/: settings.cmake
doc/: det_kabel.txt  ed.hup  eichungen.txt  endpoint.txt  feldkarten.list  map_map_km.txt  maps_feld.txt
eps_pdf/: a2_traj_ep.eps  apfu_14_150.eps  bild2_milan.eps  brems_mc.eps  brems_mc_disp_sig.eps  d.eps  detektor_eichung.eps  disp.eps  endpoint_index_geo.eps  et_detector.eps  et_etcmmt.eps  et_km_mt_optik.eps  et_raytrace.eps  etkmmt.eps  feld_schnitt.eps  feldweg.eps  fplot.eps  gg.eps  histofi.eps  kontur_punkte.eps  map.eps  max_sig.eps  polg.eps  raytrace.eps  raytrace_feld.eps  raytrace_focus_08.eps  resp.eps  sigma.eps  t.eps
geo/: detektor_geo.geo  et_km_mt.geo  feldkarte.geo  kanten.geo  kartenrand_index.geo  mt_exit_10.geo  polschuh_io.geo  polschuh_ort_cm.geo  raster5.geo  su_brems_mc.geo  su_brems_mc_0.geo
gle/: apfu.gle  brems_mc_disp_sig.gle  d.gle  d_disp.gle  disp.gle  dist.gle  eich_brel_140.gle  endpoint_geo.gle  endpoint_ort_geo.gle  et_raytrace.gle  etkmmt.gle  feld.gle  feld_schnitt.gle  feldweg.gle  focus.gle  fort10.gle  g.gle  hall_feld.gle  histofi.gle  kontur.gle  lkontur142.gle  marker_feld.gle  markers.gle  pol.gle  polg.gle  raytrace_feld.gle  raytrace_focus.gle  reldiff_maps.gle  resp.gle  sigma_disp.gle  sigma_int_count.gle  t.gle  x.gle
map/: map060.map  map081.map  map082.map  map101.map  map102.map  map11.map  map110.map  map12.map  map120.map  map122.map  map13.map  map14.map  map140.map  map142.map  mapshead.map  omap060.map  omap061.map  omap080.map  omap081.map  omap082.map  omap110.map  omap112.map  omap121.map  omap122.map  omap13.map  omap140.map  omap141.map  omap8.map  xmap141.map
src/: bldfi.f  brems.f  brems_mc_alt.f  cmap_in_cmap.f  convert_map.f0  et_basisoptik.f0  et_km_mt.f  histofi.f  in_su_brems_mc.f  km_property.f  map_in_map.f  polschuh.f  raytrace_feld_alt.f  raytrace_focus.f  su_brems_mc.f  su_cut_bildlin.f  su_find_focus.f  su_trace_track.f  x.f  (+4 more)
(+11 files in other folders)
