cmake_minimum_required (VERSION 2.6)
project(ept-simu Fortran)

# check for in-source build, forbid it!
if(CMAKE_BINARY_DIR STREQUAL CMAKE_SOURCE_DIR AND NOT MSVC_IDE)
  message(FATAL_ERROR "\nIn-source build attempt detected!\n"
    "Please create a new directory (e.g. build) and run `cmake ..`.\n"
    "Also don't forget to delete the created CMakeCache.txt and CMakeFiles dir"
    )
endif()

include (cmake/settings.cmake)

message(STATUS "*** Build Type:                " ${CMAKE_BUILD_TYPE})
message(STATUS "*** Compiler Flags (Fortran):  " ${DEFAULT_Fortran_COMPILE_FLAGS})

add_library(brems src/brems.f)
add_executable(asymaps.exe src/asymaps.f)
add_executable(bldfi.exe src/bldfi.f)
#add_executable(brems_mc_alt.exe src/brems_mc_alt.f)
#add_executable(brems_mc_el.exe src/brems_mc_el.f)
# add_executable(.exe src/brems_mc.f)
# add_executable(.exe src/brems_mc_kreis.f)
# add_executable(.exe src/cmap_in_cmap.f)
# add_executable(.exe src/cmap_in_omap.f0)
# add_executable(.exe src/comp_map_map.f)
# add_executable(.exe src/convert_map.f0)
# add_executable(.exe src/detektor_geo.f)
# add_executable(.exe src/eich_leiter.f)
# add_executable(.exe src/et_basisoptik.f0)
# add_executable(.exe src/et_km_mt.f)
# add_executable(.exe src/feld_kontur.f)
# add_executable(.exe src/feld_kontur.f0)
# add_executable(.exe src/feld_schnitt.f)
# add_executable(.exe src/hexa_dez.f)
# add_executable(.exe src/histofi.f)
# add_executable(.exe src/in_su_brems_mc.f)
# add_executable(.exe src/km_property.f)
# add_executable(.exe src/kontur.f)
# add_executable(.exe src/map_in_map.f)
# add_executable(.exe src/map_omap.f)
# add_executable(.exe src/polschuh.f)
# add_executable(.exe src/raster.f)
# add_executable(.exe src/raytrace_feld_alt.f)
# add_executable(.exe src/raytrace_feld.f)
# add_executable(.exe src/raytrace_focus_alt.f)
# add_executable(.exe src/raytrace_focus.f)
# add_executable(.exe src/sub_g_k.f)
# add_executable(.exe src/su_brems_mc.f)
# add_executable(.exe src/such_feld.f)
# add_executable(.exe src/su_cut_bildlin.f)
# add_executable(.exe src/su_find_focus.f)
# add_executable(.exe src/su_such_feld.f)
# add_executable(su_trace_feld.exe src/su_trace_feld.f)
# add_executable(su_trace_track.exe src/su_trace_track.f)
#add_executable(test.exe src/test.f)
#add_executable(test_su_brems_mc.exe src/test_su_brems_mc.f)
#add_executable(test_su_such_feld.exe src/test_su_such_feld.f)
#add_executable(test_su_trace_track.exe src/test_su_trace_track.f)
#add_executable(x.exe src/x.f)
